[build-system]
requires = ["setuptools>=61.0", "wheel", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "zernike"
version = "1.0.0"
description = "zernike provides a function: computeDescriptors()"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    { name = "Manuel Zumbado", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://your.project.url"  # Replace with actual project URL

# nice try but doesn't work becuase: no way to set numpy include, no way to set relative include paths
[tool.setuptools]
ext-modules = [
    {   name = "_zernike", sources = ["zernike.i",  "zernike.cpp"], depends=["numpy.i","zernike.h"], swig-opts = ["-c++"], include-dirs = ["/Users/toni/work/zernike/biostructure/em/utils/map2zernike"] }
]
